--- a/app/static/admin/teacher.html
+++ b/app/static/admin/teacher.html
@@ -11,7 +11,7 @@
 
 <body>
     <div style="background: #fff">
-        <custom-header title="课程管理"></custom-header>
+        <custom-header></custom-header>
     </div>
 
     <custom-action id="field-name"></custom-action>
