--- a/app/static/admin/card.html
+++ b/app/static/admin/card.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>会员卡</title>
+    <title>编辑会员卡</title>
     <link rel="stylesheet" href="card.css">
 </head>
 
@@ -14,26 +14,8 @@
     <custom-header></custom-header>
 </div>
 
-<custom-action id="field-title">
-    <svg slot="svg" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-        <path d="M11.016 20.016l3.984-4.031h6v4.031h-9.984zM6.188 18l8.672-8.672-1.219-1.219-8.625 8.672v1.219h1.172zM18.422 5.813q0.609 0.609 0.609 1.406t-0.609 1.406l-11.391 11.391h-4.031v-4.078q11.25-11.203 11.391-11.344 0.609-0.609 1.406-0.609t1.406 0.609z"></path>
-    </svg>
-    <span slot="text"></span>
-</custom-action>
-<custom-action id="field-price">
-    <svg slot="svg" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-        <path d="M11.016 20.016l3.984-4.031h6v4.031h-9.984zM6.188 18l8.672-8.672-1.219-1.219-8.625 8.672v1.219h1.172zM18.422 5.813q0.609 0.609 0.609 1.406t-0.609 1.406l-11.391 11.391h-4.031v-4.078q11.25-11.203 11.391-11.344 0.609-0.609 1.406-0.609t1.406 0.609z"></path>
-    </svg>
-    <span slot="text"
-          style="display: -webkit-box;-webkit-box-orient: vertical;-webkit-line-clamp: 1; overflow: hidden;text-overflow: ellipsis;">未设置描述</span>
-</custom-action>
-<custom-action id="field-description">
-    <svg slot="svg" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-        <path d="M11.016 20.016l3.984-4.031h6v4.031h-9.984zM6.188 18l8.672-8.672-1.219-1.219-8.625 8.672v1.219h1.172zM18.422 5.813q0.609 0.609 0.609 1.406t-0.609 1.406l-11.391 11.391h-4.031v-4.078q11.25-11.203 11.391-11.344 0.609-0.609 1.406-0.609t1.406 0.609z"></path>
-    </svg>
-    <span slot="text"
-          style="display: -webkit-box;-webkit-box-orient: vertical;-webkit-line-clamp: 1; overflow: hidden;text-overflow: ellipsis;">未设置描述</span>
-</custom-action>
+<custom-action id="field-title" head="名称" subhead="未设置"></custom-action>
+<custom-action id="field-description" head="描述" subhead="未设置"></custom-action>
 
 <hr style="border-top: solid 1px #dadce0;border-bottom: 0;margin: 0">
 
