--- a/app/static/admin/settings.html
+++ b/app/static/admin/settings.html
@@ -10,18 +10,20 @@
 </head>
 
 <body>
-<div style="background: #fff">
-    <custom-header></custom-header>
-</div>
+    <div style="background: #fff">
+        <custom-header></custom-header>
+    </div>
 
-<custom-action id="field-close_book" head="禁止预约课程"></custom-action>
-<custom-action id="field-close_booked" head="禁止取消预约"></custom-action>
+    <custom-action id="field-close_book" head="禁止预约课程" subhead="未设置"></custom-action>
+    <custom-action id="field-close_booked" head="禁止取消预约" subhead="未设置"></custom-action>
+    <custom-action id="field-market_slogan" head="促销标语" subhead="未设置"></custom-action>
+    <custom-action id="field-market_content" head="促销内容"></custom-action>
 
-<script src="../shared.js"></script>
-<script src="../components/action.js"></script>
-<script src="../components/header.js"></script>
-<script src="../components/input.js"></script>
-<script src="settings.js"></script>
+    <script src="../shared.js"></script>
+    <script src="../components/action.js"></script>
+    <script src="../components/header.js"></script>
+    <script src="../components/input.js"></script>
+    <script src="settings.js"></script>
 </body>
 
 </html>
