--- a/app/static/admin/lessons.html
+++ b/app/static/admin/lessons.html
@@ -14,6 +14,8 @@
 <custom-search></custom-search>
 <custom-toast id="toast"></custom-toast>
 <div class="section"></div>
+<custom-fab-actions></custom-fab-actions>
+<script src="../components/fab-actions.js"></script>
 <script src="../shared.js"></script>
 <script src="../api.js"></script>
 <script src="../components/toast.js"></script>
