--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>瑜伽约课微信小程序 - 开源免费</title>
 </head>
 <body>
     
 </body>
 </html>
+
