--- a/app/backend/index.html
+++ b/app/backend/index.html
@@ -102,7 +102,7 @@
     <script>
 
         const customHeader = document.querySelector('custom-header');
-        customHeader.setAttribute('title', "瑜伽约课微信小程序");
+        customHeader.setAttribute('title', "管理员");
         [...document.querySelectorAll('[data-href]')]
             .forEach(x => {
                 x.addEventListener('click', evt => {
