--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -25,6 +25,6 @@
         </div>
     </div>
     </div>
-    <custom-header></custom-header>
+    <custom-header title="瑜伽"></custom-header>
 </body>
 </html>
