--- a/app/backend/login.html
+++ b/app/backend/login.html
@@ -49,6 +49,8 @@
     </div>
     <script>
         const phoneNumber = document.querySelector('[name=phone_number]');
+        const baseUri = window.location.host === '127.0.0.1:5500' ? 'http://127.0.0.1:8081' : '';
+
         phoneNumber.addEventListener('click', evt => {
             evt.stopPropagation();
         });
@@ -57,20 +59,29 @@
         password.addEventListener('click', evt => {
             evt.stopPropagation();
         });
-        const button = document.querySelector('.button');
-        button.addEventListener('click', async evt => {
-            evt.stopPropagation();
+        async function submitUserInformation(data) {
+            const response = await fetch(`${baseUri}/v1/admin/login`, {
+                method: 'POST',
+                body: data
+            });
+            return await response.text();
+        }
+        function collectUserInformation() {
             const data = new FormData();
             data.append('phone_number', phoneNumber.value);
             data.append('password', password.value);
-            const baseUri = window.location.host === '127.0.0.1:5500' ? 'http://127.0.0.1:8081' : '';
+            return data;
+        }
+        function cacheLoginToken(token) {
+            window.localStorage.setItem("Authorization", token)
+        }
+        const button = document.querySelector('.button');
+        button.addEventListener('click', async evt => {
+            evt.stopPropagation();
             try {
-                const response = await fetch(`${baseUri}/v1/login`, {
-                    method: 'POST',
-                    body: data
-                });
-                const obj = await response.text();
-                console.log(obj)
+                const data = collectUserInformation();
+                const obj = await submitUserInformation(data);
+                cacheLoginToken(obj)
             } catch (error) {
                 console.log(error);
             }
