--- a/app/assets/files/editor.html
+++ b/app/assets/files/editor.html
@@ -206,15 +206,17 @@
 </head>
 
 <body style="height: 100%;">
-    <div style="height: 100%;display:flex;align-items: center;justify-content: center;flex-direction: column;padding-bottom: 49px;box-sizing: border-box;">
+    <div
+        style="height: 100%;display:flex;align-items: center;justify-content: center;flex-direction: column;padding-bottom: 49px;box-sizing: border-box;">
         <textarea style="flex-grow: 1;resize: none;border: none;font-size: 18px;"></textarea>
         <custom-editor-bar></custom-editor-bar>
     </div>
     <custom-toast id="toast"></custom-toast>
     <script src="toast.js"></script>
     <script src="custom-editor-bar.js"></script>
+    <script src="custom-editor-menu.js"></script>
 
-    
 </body>
+ 
 
 </html>
