--- a/app/assets/files/editor.html
+++ b/app/assets/files/editor.html
@@ -213,6 +213,7 @@
     </div>
     <custom-toast id="toast"></custom-toast>
     <script src="toast.js"></script>
+  <script src="utils.js"></script>
     <script src="custom-editor-bar.js"></script>
     <script src="custom-editor-menu.js"></script>
 
