--- a/app/assets/files/editor.html
+++ b/app/assets/files/editor.html
@@ -203,6 +203,9 @@
             background-color: rgba(0, 0, 0, 0.8)
         }
     </style>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/js-beautify/1.14.7/beautify.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/js-beautify/1.14.7/beautify-css.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/js-beautify/1.14.7/beautify-html.min.js"></script>
 </head>
 
 <body style="height: 100%;">
@@ -213,11 +216,11 @@
     </div>
     <custom-toast id="toast"></custom-toast>
     <script src="toast.js"></script>
-  <script src="utils.js"></script>
+    <script src="utils.js"></script>
     <script src="custom-editor-bar.js"></script>
     <script src="custom-editor-menu.js"></script>
 
 </body>
- 
+
 
 </html>
