--- a/app/assets/files/editor.html
+++ b/app/assets/files/editor.html
@@ -218,6 +218,7 @@
   <script src="utils.js"></script>
   <script src="custom-editor-bar.js"></script>
   <script src="custom-editor-menu.js"></script>
+  <script src="custom-editor-snippet.js"></script>
   <script>
     document.title = substringAfterLast(new URL(document.URL).searchParams.get('path'), '/');
   </script>
