--- a/app/assets/files/editor.html
+++ b/app/assets/files/editor.html
@@ -216,6 +216,7 @@
   <custom-toast id="toast"></custom-toast>
   <script src="toast.js"></script>
   <script src="utils.js"></script>
+  <script src="custom-dialog.js"></script>
   <script src="custom-editor-bar.js"></script>
   <script src="custom-editor-menu.js"></script>
   <script src="custom-editor-snippet.js"></script>
