--- a/app/backend/notice.html
+++ b/app/backend/notice.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>管理员后端 - 瑜伽约课微信小程序</title>
-    <link rel="stylesheet" href="notice.html"> 
+    <link rel="stylesheet" href="notice.css">
+    <script src="js/custom-input.js"></script>
 </head>
 
 <body>
@@ -16,16 +17,18 @@
     <div style="height: 64px;"></div>
     <div class="wrapper">
 
+        <custom-input label="标题" class="title" style="width: 100%;"></custom-input>
+
+        <custom-input label="内容" type="textarea" class="content" style="width: 100%;"></custom-input>
+        <custom-submit-bar class="submit"></custom-submit-bar>
     </div>
-    <script>
-
-    </script>
+    <custom-toast id="toast"></custom-toast>
+    <script src="toast.js"></script>
     <script src="js/custom-drawer.js"></script>
+    <script src="js/custom-submit-bar.js"></script>
+    <script src="js/custom-header.js"></script>
 
-    <script src="js/custom-header.js"></script> 
     <script src="notice.js"></script>
 </body>
 
 </html>
-
-
