--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,10 +11,11 @@
     <script src="custom-button.js"></script>
     <script src="custom-header.js"></script>
 </head>
+
 <body>
     <div style="height: 56px;">
     </div>
-    <div style="max-width: 1024px;margin: auto;position: relative;padding: 8px 16px 16px 16px;">
+    <div class="header">
         <div class="heading-wrapper">
             <div class="heading-top">
                 <custom-breadcrumb></custom-breadcrumb>
@@ -24,7 +26,30 @@
             <h1 class="heading">瑜伽约课微信小程序</h1>
         </div>
     </div>
+    <div class="grid">
+        <div class="grid-item">
+            <div class="grid-item-text">
+                免费
+            </div>
+        </div>
+        <div class="grid-item">
+            <div class="grid-item-text">
+                开源
+            </div>
+        </div>
+        <div class="grid-item">
+            <div class="grid-item-text">
+                弹性
+            </div>
+        </div>
+        <div class="grid-item">
+            <div class="grid-item-text">
+                高效
+            </div>
+        </div>
     </div>
+
     <custom-header title="瑜伽"></custom-header>
 </body>
+
 </html>
