--- a/app/backend/login.html
+++ b/app/backend/login.html
@@ -47,7 +47,11 @@
             登录
         </div>
     </div>
+    <custom-toast id="toast"></custom-toast>
+    <script src="toast.js"></script>
+    
     <script>
+        
         const phoneNumber = document.querySelector('[name=phone_number]');
         const baseUri = window.location.host === '127.0.0.1:5500' ? 'http://127.0.0.1:8081' : '';
 
@@ -82,7 +86,9 @@
                 const data = collectUserInformation();
                 const obj = await submitUserInformation(data);
                 cacheLoginToken(obj)
+                document.getElementById('toast').setAttribute('message', '成功');
             } catch (error) {
+                document.getElementById('toast').setAttribute('message', `错误${error.messaage}`);
                 console.log(error);
             }
         });
