--- a/app/backend/index.html
+++ b/app/backend/index.html
@@ -6,21 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>管理员后端 - 瑜伽约课微信小程序</title>
-    <style>
-        html {
-            font-family: Roboto, Helvetica Neue, Arial, sans-serif;
-        }
-
-        body {
-            font-size: small;
-            margin: 0;
-            background: #fff;
-            color: #4d5156;
-            background-color: #fff;
-            overflow: initial;
-            font-family: 'pingfang SC', 'helvetica neue', arial, 'hiragino sans gb', 'microsoft yahei ui', 'microsoft yahei', simsun, sans-serif;
-        }
-    </style>
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
@@ -78,9 +64,11 @@
             </svg>
             <div slot="title">设置</div>
         </custom-mini-action>
-        <custom-mini-action >
+        <custom-mini-action>
             <svg slot="image" style="height: 20px;width:20px;" viewBox="0 0 24 24">
-                <path d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM19 18H6c-2.21 0-4-1.79-4-4 0-2.05 1.53-3.76 3.56-3.97l1.07-.11.5-.95C8.08 7.14 9.94 6 12 6c2.62 0 4.88 1.86 5.39 4.43l.3 1.5 1.53.11c1.56.1 2.78 1.41 2.78 2.96 0 1.65-1.35 3-3 3zM8 13h2.55v3h2.9v-3H16l-4-4z"/>  </svg>
+                <path
+                    d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM19 18H6c-2.21 0-4-1.79-4-4 0-2.05 1.53-3.76 3.56-3.97l1.07-.11.5-.95C8.08 7.14 9.94 6 12 6c2.62 0 4.88 1.86 5.39 4.43l.3 1.5 1.53.11c1.56.1 2.78 1.41 2.78 2.96 0 1.65-1.35 3-3 3zM8 13h2.55v3h2.9v-3H16l-4-4z" />
+            </svg>
             <div slot="title">备份</div>
         </custom-mini-action>
         <custom-mini-action data-href="https://lucidu.cn/api/obs/yoga.apk">
@@ -92,24 +80,14 @@
         </custom-mini-action>
 
     </div>
-    <script>
 
-    </script>
     <script src="js/custom-drawer.js"></script>
     <script src="js/custom-mini-action.js"></script>
 
     <script src="js/custom-header.js"></script>
-    <script>
+    <script src="index.js"></script>
 
-        const customHeader = document.querySelector('custom-header');
-        customHeader.setAttribute('title', "管理员");
-        [...document.querySelectorAll('[data-href]')]
-            .forEach(x => {
-                x.addEventListener('click', evt => {
-                    window.location = evt.currentTarget.dataset.href;
-                });
-            })
-    </script>
+
 </body>
 
 </html>
