--- a/app/backend/settings.html
+++ b/app/backend/settings.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>设置 - 晨蕴瑜伽</title>
+  <title>设置 - 瑜伽约课微信小程序</title>
   <link rel="stylesheet" href="settings.css">
   <script src="js/custom-header.js"></script>
   <script src="js/custom-drawer.js"></script>
