--- a/app/backend/teacher.html
+++ b/app/backend/teacher.html
@@ -40,6 +40,9 @@
     <script src="js/custom-image-viewer.js"></script>
     <custom-submit-bar></custom-submit-bar>
     <script src="js/custom-submit-bar.js"></script>
+
+<custom-toast id="toast"></custom-toast>
+  <script src="toast.js"></script>
  
   <script src="teacher.js"></script>
 </body>
