--- a/app/backend/index.html
+++ b/app/backend/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>管理员后端 - 瑜伽约课微信小程序</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 
     
@@ -86,7 +86,7 @@
     <script src="js/custom-mini-action.js"></script>
 
     <script src="js/custom-header.js"></script>
-    <script src="index.js"></script>
+    <script src="js/index.js"></script>
 
 
 </body>
