--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 </head>
 
 <body>
-    <textarea style="width: 300px; height: 300px;">
-        1
+    <textarea style="width: 300px; height: 300px;">sss
 
 
         2
