--- a/app/backend/notices.html
+++ b/app/backend/notices.html
@@ -2,29 +2,27 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>管理员后端 - 瑜伽约课微信小程序</title>
-    <link rel="stylesheet" href="notices.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>管理员后端 - 瑜伽约课微信小程序</title>
+  <link rel="stylesheet" href="css/notices.css">
 </head>
 
 
 <body>
-    <custom-header>
-        <custom-drawer></custom-drawer>
-    </custom-header>
-    <div style="height: 64px;"></div>
-    <div class="wrapper">
- 
-</div>
-    </div>
-    <script>
+  <custom-header>
+    <custom-drawer></custom-drawer>
+  </custom-header>
+  <div style="height: 64px;"></div>
+  <div class="wrapper">
 
-    </script>
-    <script src="js/custom-drawer.js"></script>
-    <script src="js/custom-header.js"></script>
-    <script src="notices.js"></script>
+  </div>
+  </div>
+  <script src="js/custom-drawer.js"></script>
+  <script src="js/custom-header.js"></script>
+ <script src="js/custom-dialog.js"></script>
+  <script src="js/notices.js"></script>
 
 </body>
 
