--- a/app/backend/settings.html
+++ b/app/backend/settings.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>设置 - 瑜伽约课微信小程序</title>
-  <link rel="stylesheet" href="settings.css">
+  <link rel="stylesheet" href="css/settings.css">
   <script src="js/custom-header.js"></script>
   <script src="js/custom-drawer.js"></script>
   <script src="js/custom-submit-bar.js"></script>
@@ -44,7 +44,7 @@
   <div style="height: 88px;"></div>
   <custom-submit-bar></custom-submit-bar>
 
-  <script src="settings.js"></script>
+  <script src="js/settings.js"></script>
 
 </body>
 
