--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -70,40 +70,99 @@
   </div>
 
 
-  <div class="items">
-    <div class="item">
-      <div></div>
-    </div>
-  </div>
+  <div class="items"></div>
 
 
   <custom-header title="瑜伽"></custom-header>
+  <div class="separator"></div>
 
+
+  <div style="display:flex;align-items: center;justify-content: center;font-size:12px;padding:32px 32px;">
+    © 2022 微信瑜伽约课工具小程序
+  </div>
   <script>
-    let baseUri = window.location.host === "127.0.0.1:5500" ? 'http://127.0.0.1:8081' : ''
+function timeSpan(atime, btime) {
+  var milliseconds = +(btime || new Date()) - +atime;
+  var seconds = ~~(milliseconds / 1000);
+  var minutes = ~~(milliseconds / (1 * 60 * 1000));
+  var hours = ~~(milliseconds / (1 * 60 * 60 * 1000));
+  var days = ~~(milliseconds / (1 * 24 * 60 * 60 * 1000));
+  var years = ~~(days / 365.5);
+  return { years, days, hours, minutes, seconds, milliseconds };
+}
+
+function timeAgo(time, locales = 'zh') {
+  const ts = timeSpan(time);
+  if (!i18n[locales]) locales = 'zh';
+  if (ts.seconds < 60) return i18n[locales].justNow;
+  if (ts.minutes < 60) return ts.minutes + ' ' + i18n[locales].minutesAgo;
+  if (ts.hours < 24) return ts.hours + ' ' + i18n[locales].hoursAgo;
+  if (ts.days < 7) return ts.days + ' ' + i18n[locales].daysAgo;
+  if (ts.days < 30) return ~~(ts.days / 7) + ' ' + i18n[locales].weeksAgo;
+  if (ts.years < 1) return ~~(ts.days / 30) + ' ' + i18n[locales].monthsAgo;
+  return ts.years + ' ' + i18n[locales].yearsAgo;
+}
+
+const i18n = {
+  zh: {
+    justNow: '刚刚',
+    minutesAgo: '分钟前',
+    hoursAgo: '小时前',
+    daysAgo: '天前',
+    weeksAgo: '周前',
+    monthsAgo: '个月前',
+    yearsAgo: '年前',
+  },
+  en: {
+    justNow: 'just now',
+    minutesAgo: 'minutes ago',
+    hoursAgo: 'hours ago',
+    daysAgo: 'days ago',
+    weeksAgo: 'weeks ago',
+    monthsAgo: 'months ago',
+    yearsAgo: 'years ago',
+  },
+};
+
+    let baseUri = window.location.host === "127.0.0.1:5500" ? 'http://127.0.0.1:8081' : '';
     async function loadData() {
-      const response = await fetch(`${baseUri}/v1/documents`)
+      const response = await fetch(`${baseUri}/v1/documents`);
       return response.json();
     }
     async function render() {
-      const wrapper = document.querySelector('.items');
+      const
+        wrapper = document.querySelector('.items');
       let obj;
       try {
         obj = await loadData();
         obj.forEach(value => {
-          const div = document.createElement('div');
-          div.textContent = value.title;
-          div.addEventListener('click', evt => {
-            evt.stopPropagation();
+          const item = document.createElement('div');
+          item.setAttribute("class", "item");
+
+          const itemTitle = document.createElement('div');
+          itemTitle.textContent = value.name;
+          itemTitle.setAttribute("class", "item-title");
+
+          item.appendChild(itemTitle);
+
+          const itemSubtitle = document.createElement('div');
+          itemSubtitle.textContent = timeAgo(new Date(value.time * 1000));
+          itemSubtitle.setAttribute("class", "item-subtitle");
+          item.appendChild(itemSubtitle);
+
+          wrapper.appendChild(item);
+
+          item.addEventListener('click', evt => {
+            window.location = `/article?name=${encodeURIComponent(value.name)}`;
           });
-          wrapper.appendChild(div);
         })
       } catch (error) {
-
+        console.log(error);
       }
     }
     render();
   </script>
+
 </body>
 
 </html>
