--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -18,7 +18,7 @@
   <div class="header">
     <div class="heading-wrapper">
       <div class="heading-top">
-        <custom-breadcrumb></custom-breadcrumb>
+        <div></div>
         <div class="heading-right">
           <custom-button></custom-button>
         </div>
@@ -71,6 +71,13 @@
 
 
   <div class="items"></div>
+
+  <div class="separator"></div>
+
+  <div class="section">
+    <div class="section-title">支持和赞助</div>
+  </div>
+  <div class="separator"></div>
 
 
   <custom-header title="瑜伽"></custom-header>
@@ -166,3 +173,4 @@ const i18n = {
 </body>
 
 </html>
+
