--- a/app/backend/lesson.html
+++ b/app/backend/lesson.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>排课 - 晨蕴瑜伽</title>
+  <title>课程 - 瑜伽约课微信小程序</title>
   <link rel="stylesheet" href="css/lesson.css">
 
 </head>
@@ -29,7 +29,7 @@
       <div class="subhead-text" id="subhead-text"></div>
     </div>
   </div>
-  <div class="actions">
+  <div class="actions" id="actions">
     <div class="action" id="suspend-lesson">
       <div class="action-image">
         <svg width="24" height="24" viewBox="0 0 24 24" focusable="false" class=" NMm5M">
@@ -44,7 +44,8 @@
     <div class="action" id="update-lesson">
       <div class="action-image">
         <svg width="24" height="24" viewBox="0 0 24 24" focusable="false" class=" NMm5M">
-          <path d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z">
+          <path
+            d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z">
           </path>
         </svg>
       </div>
@@ -56,16 +57,18 @@
   <div class="section">
     学员
   </div>
+  <div id="section">
+  </div>
   <custom-drawer></custom-drawer>
   <div class="bottom-space"></div>
 
-  </div>
-  <div class="popup" style="display:none; ">
-    <!-- height: 76px; -->
+  <div class="popup" id="popup">
+    <!-- height: 76px;  style="display:none; "-->
     <div class="popup-header">
-      <div class="popup-button-back">
-        <svg width="24" height="24" viewBox="0 0 24 24" focusable="false" class=" NMm5M">
-          <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z">
+      <div class="popup-button-back" id="popup-button-back">
+        <svg width="24" height="24" viewBox="0 0 24 24" focusable="false" >
+          <path
+            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z">
           </path>
         </svg>
       </div>
@@ -75,7 +78,7 @@
       </div>
     </div>
     <div class="popup-content">
-      <custom-menu-picker id="picker-lesson"></custom-menu-picker>
+      <custom-menu-picker  id="picker-lesson"></custom-menu-picker>
       <custom-menu-picker id="picker-lesson-type"></custom-menu-picker>
       <custom-menu-picker id="picker-teacher"></custom-menu-picker>
       <custom-menu-picker id="picker-start-time"></custom-menu-picker>
@@ -91,10 +94,11 @@
         </div>
       </div>
     </div>
-    <script src="js/custom-dialog.js"></script>
-    <script src="js/lesson.utils.js"></script>
-    <script src="js/lesson.js"></script>
-    <script src="js/custom-menu-picker.js"></script>
+  </div>
+  <script src="js/custom-dialog.js"></script>
+  <script src="js/lesson.utils.js"></script>
+  <script src="js/lesson.js"></script>
+  <script src="js/custom-menu-picker.js"></script>
 </body>
 
 </html>
