--- a/app/backend/lesson.html
+++ b/app/backend/lesson.html
@@ -84,10 +84,10 @@
   </div>
   <div class="popup-footer">
     <div class="popup-buttons">
-      <div class="popup-button">
+      <div class="popup-button" id="popup-close">
         取消
       </div>
-      <div class="popup-button">
+      <div class="popup-button" id="submit">
         确认
       </div>
     </div>
