--- a/app/backend/lesson.html
+++ b/app/backend/lesson.html
@@ -13,7 +13,7 @@
 <body>
   <div class="image-container">
     <div class="button-back">
-      <div class="button-back-image">
+      <div class="button-back-image" id="back">
         <svg width="24" height="24" viewBox="0 0 24 24" focusable="false">
           <path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"></path>
         </svg>
