--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -94,7 +94,7 @@
   <div style="display:flex;align-items: center;justify-content: center;font-size:12px;padding:32px 32px;">
     © 2022 微信瑜伽约课工具小程序
   </div>
-  <custom-drawer bind="customDrawer"></custom-drawer>
+  <custom-drawer bind="customDrawer" expand="true"></custom-drawer>
 
   <custom-header title="瑜伽" bind @click="showDrawer"></custom-header>
   <script src="js/index.js"></script>
