--- a/app/backend/image.html
+++ b/app/backend/image.html
@@ -138,10 +138,11 @@
         </div>
     </div> -->
     <img style="max-width: 100%;" src="https://chenyunyoga.cn/api/lesson/11">
-    <script src="html-to-image.js"></script>
+     
     <script>
         // var node = document.getElementById('my-node');
 
+        // html-to-image.js
         // htmlToImage.toJpeg(node)
         //     .then(function (dataUrl) {
         //         node.remove();
