--- a/app/backend/login.html
+++ b/app/backend/login.html
@@ -6,20 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>管理员登录 - 瑜伽约课微信小程序</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="css/login.css">
 </head>
 
 <body>
     <div style="margin: 36px;display: flex;flex-direction: column;gap: 16px;">
-        <input type="text" name="phone_number" placeholder="手机号码" class="input">
-        <input type="password" name="password" placeholder="密码" class="input">
-        <div class="button">
+        <input type="text" bind="phone_number" placeholder="手机号码" class="input">
+        <input type="password" bind="password" placeholder="密码" class="input">
+        <div class="button" bind @click="submit">
             登录
         </div>
     </div>
     <custom-toast id="toast"></custom-toast>
-    <script src="toast.js"></script>
-    <script src="login.js"></script>
+    <script src="js/toast.js"></script>
+    <script src="js/login.js"></script>
 
 </body>
 
