--- a/app/backend/index.html
+++ b/app/backend/index.html
@@ -7,8 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>管理员后端 - 瑜伽约课微信小程序</title>
   <link rel="stylesheet" href="css/index.css">
-  <script type="module" src="./components/custom-actions.js"></script>
 
+  <script type="module" src="../components/custom-header.js"></script>
+  <script type="module" src="../components/custom-drawer.js"></script>
+  <script type="module" src="../components/custom-actions.js"></script>
 
 </head>
 
@@ -18,8 +20,9 @@
   </custom-header>
   <div style="height: 64px;"></div>
   <custom-actions></custom-actions>
-  <script src="js/custom-drawer.js"></script>
-  <script src="js/custom-header.js"></script>
+
+  <custom-drawer bind="customDrawer"></custom-drawer>
+  <custom-header title="瑜伽" bind @submit="showDrawer"></custom-header>
   <script src="js/index.js"></script>
 </body>
 
