--- a/app/backend/users.html
+++ b/app/backend/users.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>用户列表 - 微信瑜伽约课程序</title>
   <link rel="stylesheet" href="css/users.css">
+  <script type="module" src="../components/shared.js"></script>
   <script type="module" src="../components/custom-header.js"></script>
   <script type="module" src="../components/custom-drawer.js"></script>
   <script type="module" src="../components/custom-user-item.js"></script>
