更新数据库脚本

--- a/app/backend/editor.html
+++ b/app/backend/editor.html
@@ -10,7 +10,7 @@
   <script type="module" src="../components/custom-header.js"></script>
   <script type="module" src="../components/custom-drawer.js"></script>
   <script type="module" src="../components/custom-bottom-bar.js"></script>
-
+  <script type="module" src="../components/custom-dialog-actions.js"></script>
   <script src="../components/toast.js"></script>
 
 </head>
